# ooxml-tools

./: .editorconfig  .gitignore  404.html  Cargo.toml  README.md  bun.lockb  index.html  package.json  rust-toolchain.toml  sitemap-0.xml  sitemap-index.xml  turbo.json
.github/: dependabot.yml
.github/workflows/: gh-pages.yml
_astro/: hoisted.L4ZXYxSO.js  hoisted.j2bGYdH_.js  index.WAJb_EXe.css  ui-core.eUsMS3zz.js  ui-core.t_Ypy-z_.js
crates/docx-parser/: Cargo.toml
crates/docx-parser/assets/: example.docx
crates/docx-parser/output/: example.txt
crates/docx-parser/src/: attributes.rs  lib.rs  main.rs
docs/: astro.config.mjs  bun.lockb  package.json
docs/src/content/docs/: index.mdx
pagefind/: pagefind-entry.json  pagefind.en_ec394df9ab.pf_meta
pagefind/fragment/: en_7295fff.pf_fragment
pagefind/index/: en_5b692a2.pf_index
